# Neural-Information-Compressor

./: .gitignore  README.md  pyproject.toml  test.txt
docs/: design.md  determinism.md  test_results.md
nic/: cli.py  format.py  pipeline.py
scripts/: compare_compression.py  freeze_model.py  freeze_tokenizer.py
tests/: test_determinism.py  test_model.py
